# AI_Hiring_Manager

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  frontend.html  hiring_manager.db  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh  websocket_handler.patch
api/: analysis_routes.py  auth_routes.py  candidate_routes.py  dashboard_routes.py  formatter.py  interview_routes.py  logger.py  main.py  quiz_routes.py  reattempt_routes.py  results_routes.py  websocket_handler.py
core/: audio_services.py  auth.py  chatbot.py  config.py  database.py  interview_agent.py  models.py  notification_service.py  resume_service.py  seed_admin.py
documents/: .gitkeep
gcc-hiring-frontend/: .env.example  README.md  index.html  package-lock.json  package.json
gcc-hiring-frontend/public/jd/: automation.docx  data-analytics.docx  data-science.docx  digital-innovation.docx  platform-engineering.docx  software-development.docx  web-applications.docx
gcc-hiring-frontend/src/: App.jsx  index.css
gcc-hiring-frontend/src/components/: Chatbot.jsx  RolesSection.jsx  VideoBanner.jsx
gcc-hiring-frontend/src/pages/: ApplyPage.jsx  AuthPage.jsx  InterviewPage.jsx  LandingPage.jsx  ProfilePage.jsx  QuizGateway.jsx  RecruiterPage.jsx
migrations/: add_reattempt_support.py
new_frontend/: index.html  tailwind.config.ts  vite.config.ts
new_frontend/src/: App.tsx  index.css
new_frontend/src/components/: ProtectedRoute.tsx
new_frontend/src/data/: interviewQuestions.ts
new_frontend/src/hooks/: useVoiceInterview.ts
(+29 files in other folders)
