[project]
name = "ai-hiring-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.14",
    "edge-tts>=7.2.7",
    "fastapi>=0.125.0",
    "google-genai>=1.56.0",
    "groq>=1.0.0",
    "openai>=2.13.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
